--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,3 +1,7 @@
 {
-
+    "⚠️need to restart Logseq to take effect" :"⚠️Logseqの再起動が必要です",
+    "Enable display the specified icon on the first parent page" :"親ページのアイコンを表示する",
+    "Show abbreviations with dots (..) or nothing" :"ドットで省略されたのを示すかどうか",
+    "From what level should omit hierarchy?" :"どのレベルから省略するか",
+    "Show First letter of Root page name" :"短縮する文字列の長さを決める"
 }
